// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeNodeComponent does not render children if the node is loading 1`] = `
<TreeItem
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="rootClass"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        src="rootIcon"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    }
    style={
      {
        "backgroundColor": undefined,
      }
    }
  >
    rootLabel
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent fully renders a tree 1`] = `
<TreeNodeComponent
  node={
    {
      "children": [
        {
          "children": [
            {
              "className": "grandchild1Class",
              "iconSrc": "grandchild1Icon.svg",
              "id": "grandchild1",
              "isSelected": [Function],
              "label": "grandchild1Label",
              "onClick": [MockFunction grandchild1Click],
            },
            {
              "className": "grandchild2Class",
              "iconSrc": "grandchild2Icon",
              "id": "grandchild2",
              "label": "grandchild2Label",
              "onClick": [MockFunction grandchild2Click],
            },
          ],
          "className": "child1Class",
          "iconSrc": "child1Icon",
          "id": "child1",
          "label": "child1Label",
          "onClick": [MockFunction child1Click],
        },
        {
          "children": [
            {
              "className": "grandchild3NotRenderedClass",
              "iconSrc": "grandchild3NotRenderedIcon",
              "id": "grandchild3NotRendered",
              "label": "grandchild3NotRenderedLabel",
              "onClick": [MockFunction grandchild3NotRenderedClick],
            },
          ],
          "className": "child2LoadingClass",
          "iconSrc": "child2LoadingIcon",
          "id": "child2Loading",
          "isLoading": true,
          "label": "child2LoadingLabel",
          "onClick": [MockFunction child2LoadingClick],
        },
        {
          "className": "child3ExpandingClass",
          "iconSrc": "child3ExpandingIcon",
          "id": "child3Expanding",
          "label": "child3ExpandingLabel",
          "onClick": [MockFunction child3ExpandingClick] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "onExpanded": [Function],
        },
      ],
      "className": "rootClass",
      "iconSrc": "rootIcon",
      "id": "root",
      "isSelected": [Function],
      "label": "rootLabel",
      "onClick": [MockFunction rootClick],
    }
  }
  treeNodeId="root"
>
  <TreeItem
    data-test="TreeNodeContainer:root"
    itemType="branch"
    onOpenChange={[Function]}
    value="root"
  >
    <div
      aria-expanded={false}
      aria-level={0}
      className="fui-TreeItem r15xhw3a"
      data-fui-tree-item-value="root"
      data-test="TreeNodeContainer:root"
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="treeitem"
      tabIndex={-1}
    >
      <ContextSelector.Provider
        value={
          {
            "actionsRef": {
              "current": null,
            },
            "checked": false,
            "expandIconRef": {
              "current": <div
                aria-hidden="true"
                class="fui-TreeItemLayout__expandIcon rh4pu5o"
              >
                <svg
                  aria-hidden="true"
                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="12"
                  style="transform: rotate(0deg);"
                  viewBox="0 0 12 12"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                    fill="currentColor"
                  />
                </svg>
              </div>,
            },
            "isActionsVisible": false,
            "isAsideVisible": false,
            "itemType": "branch",
            "layoutRef": {
              "current": <div
                class="fui-TreeItemLayout r1bx0xiv rootClass ___51javz0_ow08sb0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9"
                data-test="TreeNode:root"
              >
                <div
                  aria-hidden="true"
                  class="fui-TreeItemLayout__expandIcon rh4pu5o"
                >
                  <svg
                    aria-hidden="true"
                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                    fill="currentColor"
                    height="12"
                    style="transform: rotate(0deg);"
                    viewBox="0 0 12 12"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  aria-hidden="true"
                  class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                >
                  <img
                    alt=""
                    src="rootIcon"
                    style="width: 16px; height: 16px;"
                  />
                </div>
                <div
                  class="fui-TreeItemLayout__main rklbe47"
                >
                  rootLabel
                </div>
              </div>,
            },
            "open": false,
            "selectionRef": {
              "current": null,
            },
            "subtreeRef": {
              "current": null,
            },
            "treeItemRef": {
              "current": <div
                aria-expanded="false"
                aria-level="0"
                class="fui-TreeItem r15xhw3a"
                data-fui-tree-item-value="root"
                data-test="TreeNodeContainer:root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="fui-TreeItemLayout r1bx0xiv rootClass ___51javz0_ow08sb0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9"
                  data-test="TreeNode:root"
                >
                  <div
                    aria-hidden="true"
                    class="fui-TreeItemLayout__expandIcon rh4pu5o"
                  >
                    <svg
                      aria-hidden="true"
                      class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                      fill="currentColor"
                      height="12"
                      style="transform: rotate(0deg);"
                      viewBox="0 0 12 12"
                      width="12"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    aria-hidden="true"
                    class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                  >
                    <img
                      alt=""
                      src="rootIcon"
                      style="width: 16px; height: 16px;"
                    />
                  </div>
                  <div
                    class="fui-TreeItemLayout__main rklbe47"
                  >
                    rootLabel
                  </div>
                </div>
                <div
                  class="fui-Tree rnv2ez3"
                  role="tree"
                >
                  <div
                    aria-expanded="false"
                    aria-level="1"
                    class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                    data-fui-tree-item-value="root/child1Label"
                    data-test="TreeNodeContainer:root/child1Label"
                    role="treeitem"
                    tabindex="0"
                  >
                    <div
                      class="fui-TreeItemLayout r1bx0xiv child1Class ___51javz0_ow08sb0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9"
                      data-test="TreeNode:root/child1Label"
                    >
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__expandIcon rh4pu5o"
                      >
                        <svg
                          aria-hidden="true"
                          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                          fill="currentColor"
                          height="12"
                          style="transform: rotate(0deg);"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                      >
                        <img
                          alt=""
                          src="child1Icon"
                          style="width: 16px; height: 16px;"
                        />
                      </div>
                      <div
                        class="fui-TreeItemLayout__main rklbe47"
                      >
                        child1Label
                      </div>
                    </div>
                  </div>
                  <div
                    aria-expanded="false"
                    aria-level="1"
                    class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                    data-fui-tree-item-value="root/child2LoadingLabel"
                    data-test="TreeNodeContainer:root/child2LoadingLabel"
                    role="treeitem"
                    tabindex="-1"
                  >
                    <div
                      class="fui-TreeItemLayout r1bx0xiv child2LoadingClass ___51javz0_ow08sb0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9"
                      data-test="TreeNode:root/child2LoadingLabel"
                    >
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__expandIcon rh4pu5o"
                      >
                        <svg
                          aria-hidden="true"
                          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                          fill="currentColor"
                          height="12"
                          style="transform: rotate(0deg);"
                          viewBox="0 0 12 12"
                          width="12"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                      >
                        <img
                          alt=""
                          src="child2LoadingIcon"
                          style="width: 16px; height: 16px;"
                        />
                      </div>
                      <div
                        class="fui-TreeItemLayout__main rklbe47"
                      >
                        child2LoadingLabel
                      </div>
                    </div>
                  </div>
                  <div
                    aria-level="1"
                    class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                    data-fui-tree-item-value="root/child3ExpandingLabel"
                    data-test="TreeNodeContainer:root/child3ExpandingLabel"
                    role="treeitem"
                    tabindex="-1"
                  >
                    <div
                      class="fui-TreeItemLayout r1bx0xiv child3ExpandingClass ___ehtpr00_100l8p1 fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc"
                      data-test="TreeNode:root/child3ExpandingLabel"
                    >
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__expandIcon rh4pu5o"
                      >
                        <div
                          class="fui-Spinner r82apo5"
                          role="progressbar"
                        >
                          <span
                            class="fui-Spinner__spinner rvgcg50 ___cntk4j0_qwvqay0 fd461yt fjw5fx7 f1v3ph3m"
                          >
                            <span
                              class="fui-Spinner__spinnerTail rxov3xa"
                            />
                          </span>
                        </div>
                      </div>
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                      >
                        <img
                          alt=""
                          src="child3ExpandingIcon"
                          style="width: 16px; height: 16px;"
                        />
                      </div>
                      <div
                        class="fui-TreeItemLayout__main rklbe47"
                      >
                        child3ExpandingLabel
                      </div>
                    </div>
                  </div>
                </div>
              </div>,
            },
            "value": "root",
          }
        }
      >
        <TreeItemLayout
          actions={false}
          className="rootClass"
          data-test="TreeNode:root"
          iconBefore={
            <img
              alt=""
              src="rootIcon"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
            />
          }
          style={
            {
              "backgroundColor": undefined,
            }
          }
        >
          <div
            className="fui-TreeItemLayout r1bx0xiv rootClass ___51javz0_ow08sb0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9"
            data-test="TreeNode:root"
            style={
              {
                "backgroundColor": undefined,
              }
            }
          >
            <div
              aria-hidden={true}
              className="fui-TreeItemLayout__expandIcon rh4pu5o"
            >
              <TreeItemChevron>
                <ChevronRight12Regular
                  style={
                    {
                      "transform": "rotate(0deg)",
                    }
                  }
                >
                  <svg
                    aria-hidden={true}
                    className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                    fill="currentColor"
                    height="12"
                    style={
                      {
                        "transform": "rotate(0deg)",
                      }
                    }
                    viewBox="0 0 12 12"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                      fill="currentColor"
                    />
                  </svg>
                </ChevronRight12Regular>
              </TreeItemChevron>
            </div>
            <div
              aria-hidden={true}
              className="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
            >
              <img
                alt=""
                src="rootIcon"
                style={
                  {
                    "height": 16,
                    "width": 16,
                  }
                }
              />
            </div>
            <div
              className="fui-TreeItemLayout__main rklbe47"
            >
              rootLabel
            </div>
          </div>
        </TreeItemLayout>
        <Tree
          style={
            {
              "overflow": undefined,
            }
          }
        >
          <TreeProvider
            value={
              {
                "appearance": "subtle",
                "checkedItems": {
                  "clear": [Function],
                  "dangerouslyGetInternalMap_unstable": [Function],
                  "delete": [Function],
                  "get": [Function],
                  "has": [Function],
                  "set": [Function],
                  "size": 0,
                  Symbol(Symbol.iterator): [Function],
                },
                "contextType": "root",
                "level": 1,
                "openItems": {
                  "add": [Function],
                  "clear": [Function],
                  "dangerouslyGetInternalSet_unstable": [Function],
                  "delete": [Function],
                  "has": [Function],
                  "size": 0,
                  Symbol(Symbol.iterator): [Function],
                },
                "requestTreeResponse": [Function],
                "selectionMode": "none",
                "size": "medium",
                "treeType": "nested",
              }
            }
          >
            <ContextSelector.Provider
              value={
                {
                  "appearance": "subtle",
                  "checkedItems": {
                    "clear": [Function],
                    "dangerouslyGetInternalMap_unstable": [Function],
                    "delete": [Function],
                    "get": [Function],
                    "has": [Function],
                    "set": [Function],
                    "size": 0,
                    Symbol(Symbol.iterator): [Function],
                  },
                  "contextType": "root",
                  "level": 1,
                  "openItems": {
                    "add": [Function],
                    "clear": [Function],
                    "dangerouslyGetInternalSet_unstable": [Function],
                    "delete": [Function],
                    "has": [Function],
                    "size": 0,
                    Symbol(Symbol.iterator): [Function],
                  },
                  "requestTreeResponse": [Function],
                  "selectionMode": "none",
                  "size": "medium",
                  "treeType": "nested",
                }
              }
            >
              <div
                className="fui-Tree rnv2ez3"
                role="tree"
                style={
                  {
                    "overflow": undefined,
                  }
                }
              >
                <TreeNodeComponent
                  key="child1Label"
                  node={
                    {
                      "children": [
                        {
                          "className": "grandchild1Class",
                          "iconSrc": "grandchild1Icon.svg",
                          "id": "grandchild1",
                          "isSelected": [Function],
                          "label": "grandchild1Label",
                          "onClick": [MockFunction grandchild1Click],
                        },
                        {
                          "className": "grandchild2Class",
                          "iconSrc": "grandchild2Icon",
                          "id": "grandchild2",
                          "label": "grandchild2Label",
                          "onClick": [MockFunction grandchild2Click],
                        },
                      ],
                      "className": "child1Class",
                      "iconSrc": "child1Icon",
                      "id": "child1",
                      "label": "child1Label",
                      "onClick": [MockFunction child1Click],
                    }
                  }
                  treeNodeId="root/child1Label"
                >
                  <TreeItem
                    data-test="TreeNodeContainer:root/child1Label"
                    itemType="branch"
                    onOpenChange={[Function]}
                    value="root/child1Label"
                  >
                    <div
                      aria-expanded={false}
                      aria-level={1}
                      className="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                      data-fui-tree-item-value="root/child1Label"
                      data-test="TreeNodeContainer:root/child1Label"
                      onChange={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="treeitem"
                      tabIndex={-1}
                    >
                      <ContextSelector.Provider
                        value={
                          {
                            "actionsRef": {
                              "current": null,
                            },
                            "checked": false,
                            "expandIconRef": {
                              "current": <div
                                aria-hidden="true"
                                class="fui-TreeItemLayout__expandIcon rh4pu5o"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                  fill="currentColor"
                                  height="12"
                                  style="transform: rotate(0deg);"
                                  viewBox="0 0 12 12"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </div>,
                            },
                            "isActionsVisible": false,
                            "isAsideVisible": false,
                            "itemType": "branch",
                            "layoutRef": {
                              "current": <div
                                class="fui-TreeItemLayout r1bx0xiv child1Class ___51javz0_ow08sb0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9"
                                data-test="TreeNode:root/child1Label"
                              >
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                    fill="currentColor"
                                    height="12"
                                    style="transform: rotate(0deg);"
                                    viewBox="0 0 12 12"
                                    width="12"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </div>
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                >
                                  <img
                                    alt=""
                                    src="child1Icon"
                                    style="width: 16px; height: 16px;"
                                  />
                                </div>
                                <div
                                  class="fui-TreeItemLayout__main rklbe47"
                                >
                                  child1Label
                                </div>
                              </div>,
                            },
                            "open": false,
                            "selectionRef": {
                              "current": null,
                            },
                            "subtreeRef": {
                              "current": null,
                            },
                            "treeItemRef": {
                              "current": <div
                                aria-expanded="false"
                                aria-level="1"
                                class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                                data-fui-tree-item-value="root/child1Label"
                                data-test="TreeNodeContainer:root/child1Label"
                                role="treeitem"
                                tabindex="0"
                              >
                                <div
                                  class="fui-TreeItemLayout r1bx0xiv child1Class ___51javz0_ow08sb0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9"
                                  data-test="TreeNode:root/child1Label"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                      fill="currentColor"
                                      height="12"
                                      style="transform: rotate(0deg);"
                                      viewBox="0 0 12 12"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                  >
                                    <img
                                      alt=""
                                      src="child1Icon"
                                      style="width: 16px; height: 16px;"
                                    />
                                  </div>
                                  <div
                                    class="fui-TreeItemLayout__main rklbe47"
                                  >
                                    child1Label
                                  </div>
                                </div>
                              </div>,
                            },
                            "value": "root/child1Label",
                          }
                        }
                      >
                        <TreeItemLayout
                          actions={false}
                          className="child1Class"
                          data-test="TreeNode:root/child1Label"
                          iconBefore={
                            <img
                              alt=""
                              src="child1Icon"
                              style={
                                {
                                  "height": 16,
                                  "width": 16,
                                }
                              }
                            />
                          }
                          style={
                            {
                              "backgroundColor": undefined,
                            }
                          }
                        >
                          <div
                            className="fui-TreeItemLayout r1bx0xiv child1Class ___51javz0_ow08sb0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9"
                            data-test="TreeNode:root/child1Label"
                            style={
                              {
                                "backgroundColor": undefined,
                              }
                            }
                          >
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__expandIcon rh4pu5o"
                            >
                              <TreeItemChevron>
                                <ChevronRight12Regular
                                  style={
                                    {
                                      "transform": "rotate(0deg)",
                                    }
                                  }
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                    fill="currentColor"
                                    height="12"
                                    style={
                                      {
                                        "transform": "rotate(0deg)",
                                      }
                                    }
                                    viewBox="0 0 12 12"
                                    width="12"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </ChevronRight12Regular>
                              </TreeItemChevron>
                            </div>
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                            >
                              <img
                                alt=""
                                src="child1Icon"
                                style={
                                  {
                                    "height": 16,
                                    "width": 16,
                                  }
                                }
                              />
                            </div>
                            <div
                              className="fui-TreeItemLayout__main rklbe47"
                            >
                              child1Label
                            </div>
                          </div>
                        </TreeItemLayout>
                        <Tree
                          style={
                            {
                              "overflow": undefined,
                            }
                          }
                        >
                          <TreeProvider
                            value={
                              {
                                "contextType": "subtree",
                                "level": 2,
                              }
                            }
                          />
                        </Tree>
                      </ContextSelector.Provider>
                    </div>
                  </TreeItem>
                </TreeNodeComponent>
                <TreeNodeComponent
                  key="child2LoadingLabel"
                  node={
                    {
                      "children": [
                        {
                          "className": "grandchild3NotRenderedClass",
                          "iconSrc": "grandchild3NotRenderedIcon",
                          "id": "grandchild3NotRendered",
                          "label": "grandchild3NotRenderedLabel",
                          "onClick": [MockFunction grandchild3NotRenderedClick],
                        },
                      ],
                      "className": "child2LoadingClass",
                      "iconSrc": "child2LoadingIcon",
                      "id": "child2Loading",
                      "isLoading": true,
                      "label": "child2LoadingLabel",
                      "onClick": [MockFunction child2LoadingClick],
                    }
                  }
                  treeNodeId="root/child2LoadingLabel"
                >
                  <TreeItem
                    data-test="TreeNodeContainer:root/child2LoadingLabel"
                    itemType="branch"
                    onOpenChange={[Function]}
                    value="root/child2LoadingLabel"
                  >
                    <div
                      aria-expanded={false}
                      aria-level={1}
                      className="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                      data-fui-tree-item-value="root/child2LoadingLabel"
                      data-test="TreeNodeContainer:root/child2LoadingLabel"
                      onChange={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="treeitem"
                      tabIndex={-1}
                    >
                      <ContextSelector.Provider
                        value={
                          {
                            "actionsRef": {
                              "current": null,
                            },
                            "checked": false,
                            "expandIconRef": {
                              "current": <div
                                aria-hidden="true"
                                class="fui-TreeItemLayout__expandIcon rh4pu5o"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                  fill="currentColor"
                                  height="12"
                                  style="transform: rotate(0deg);"
                                  viewBox="0 0 12 12"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </div>,
                            },
                            "isActionsVisible": false,
                            "isAsideVisible": false,
                            "itemType": "branch",
                            "layoutRef": {
                              "current": <div
                                class="fui-TreeItemLayout r1bx0xiv child2LoadingClass ___51javz0_ow08sb0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9"
                                data-test="TreeNode:root/child2LoadingLabel"
                              >
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                    fill="currentColor"
                                    height="12"
                                    style="transform: rotate(0deg);"
                                    viewBox="0 0 12 12"
                                    width="12"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </div>
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                >
                                  <img
                                    alt=""
                                    src="child2LoadingIcon"
                                    style="width: 16px; height: 16px;"
                                  />
                                </div>
                                <div
                                  class="fui-TreeItemLayout__main rklbe47"
                                >
                                  child2LoadingLabel
                                </div>
                              </div>,
                            },
                            "open": false,
                            "selectionRef": {
                              "current": null,
                            },
                            "subtreeRef": {
                              "current": null,
                            },
                            "treeItemRef": {
                              "current": <div
                                aria-expanded="false"
                                aria-level="1"
                                class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                                data-fui-tree-item-value="root/child2LoadingLabel"
                                data-test="TreeNodeContainer:root/child2LoadingLabel"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="fui-TreeItemLayout r1bx0xiv child2LoadingClass ___51javz0_ow08sb0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9"
                                  data-test="TreeNode:root/child2LoadingLabel"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                      fill="currentColor"
                                      height="12"
                                      style="transform: rotate(0deg);"
                                      viewBox="0 0 12 12"
                                      width="12"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                  >
                                    <img
                                      alt=""
                                      src="child2LoadingIcon"
                                      style="width: 16px; height: 16px;"
                                    />
                                  </div>
                                  <div
                                    class="fui-TreeItemLayout__main rklbe47"
                                  >
                                    child2LoadingLabel
                                  </div>
                                </div>
                              </div>,
                            },
                            "value": "root/child2LoadingLabel",
                          }
                        }
                      >
                        <TreeItemLayout
                          actions={false}
                          className="child2LoadingClass"
                          data-test="TreeNode:root/child2LoadingLabel"
                          iconBefore={
                            <img
                              alt=""
                              src="child2LoadingIcon"
                              style={
                                {
                                  "height": 16,
                                  "width": 16,
                                }
                              }
                            />
                          }
                          style={
                            {
                              "backgroundColor": undefined,
                            }
                          }
                        >
                          <div
                            className="fui-TreeItemLayout r1bx0xiv child2LoadingClass ___51javz0_ow08sb0 fk6fouc fkhj508 figsok6 f1i3iumi fo100m9"
                            data-test="TreeNode:root/child2LoadingLabel"
                            style={
                              {
                                "backgroundColor": undefined,
                              }
                            }
                          >
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__expandIcon rh4pu5o"
                            >
                              <TreeItemChevron>
                                <ChevronRight12Regular
                                  style={
                                    {
                                      "transform": "rotate(0deg)",
                                    }
                                  }
                                >
                                  <svg
                                    aria-hidden={true}
                                    className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                    fill="currentColor"
                                    height="12"
                                    style={
                                      {
                                        "transform": "rotate(0deg)",
                                      }
                                    }
                                    viewBox="0 0 12 12"
                                    width="12"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M4.65 2.15a.5.5 0 0 0 0 .7L7.79 6 4.65 9.15a.5.5 0 1 0 .7.7l3.5-3.5a.5.5 0 0 0 0-.7l-3.5-3.5a.5.5 0 0 0-.7 0Z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </ChevronRight12Regular>
                              </TreeItemChevron>
                            </div>
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                            >
                              <img
                                alt=""
                                src="child2LoadingIcon"
                                style={
                                  {
                                    "height": 16,
                                    "width": 16,
                                  }
                                }
                              />
                            </div>
                            <div
                              className="fui-TreeItemLayout__main rklbe47"
                            >
                              child2LoadingLabel
                            </div>
                          </div>
                        </TreeItemLayout>
                      </ContextSelector.Provider>
                    </div>
                  </TreeItem>
                </TreeNodeComponent>
                <TreeNodeComponent
                  key="child3ExpandingLabel"
                  node={
                    {
                      "className": "child3ExpandingClass",
                      "iconSrc": "child3ExpandingIcon",
                      "id": "child3Expanding",
                      "label": "child3ExpandingLabel",
                      "onClick": [MockFunction child3ExpandingClick] {
                        "calls": [
                          [],
                        ],
                        "results": [
                          {
                            "type": "return",
                            "value": undefined,
                          },
                        ],
                      },
                      "onExpanded": [Function],
                    }
                  }
                  treeNodeId="root/child3ExpandingLabel"
                >
                  <TreeItem
                    data-test="TreeNodeContainer:root/child3ExpandingLabel"
                    itemType="leaf"
                    onOpenChange={[Function]}
                    value="root/child3ExpandingLabel"
                  >
                    <div
                      aria-level={1}
                      className="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                      data-fui-tree-item-value="root/child3ExpandingLabel"
                      data-test="TreeNodeContainer:root/child3ExpandingLabel"
                      onChange={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="treeitem"
                      tabIndex={-1}
                    >
                      <ContextSelector.Provider
                        value={
                          {
                            "actionsRef": {
                              "current": null,
                            },
                            "checked": false,
                            "expandIconRef": {
                              "current": <div
                                aria-hidden="true"
                                class="fui-TreeItemLayout__expandIcon rh4pu5o"
                              >
                                <div
                                  class="fui-Spinner r82apo5"
                                  role="progressbar"
                                >
                                  <span
                                    class="fui-Spinner__spinner rvgcg50 ___cntk4j0_qwvqay0 fd461yt fjw5fx7 f1v3ph3m"
                                  >
                                    <span
                                      class="fui-Spinner__spinnerTail rxov3xa"
                                    />
                                  </span>
                                </div>
                              </div>,
                            },
                            "isActionsVisible": false,
                            "isAsideVisible": false,
                            "itemType": "leaf",
                            "layoutRef": {
                              "current": <div
                                class="fui-TreeItemLayout r1bx0xiv child3ExpandingClass ___ehtpr00_100l8p1 fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc"
                                data-test="TreeNode:root/child3ExpandingLabel"
                              >
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                >
                                  <div
                                    class="fui-Spinner r82apo5"
                                    role="progressbar"
                                  >
                                    <span
                                      class="fui-Spinner__spinner rvgcg50 ___cntk4j0_qwvqay0 fd461yt fjw5fx7 f1v3ph3m"
                                    >
                                      <span
                                        class="fui-Spinner__spinnerTail rxov3xa"
                                      />
                                    </span>
                                  </div>
                                </div>
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                >
                                  <img
                                    alt=""
                                    src="child3ExpandingIcon"
                                    style="width: 16px; height: 16px;"
                                  />
                                </div>
                                <div
                                  class="fui-TreeItemLayout__main rklbe47"
                                >
                                  child3ExpandingLabel
                                </div>
                              </div>,
                            },
                            "open": false,
                            "selectionRef": {
                              "current": null,
                            },
                            "subtreeRef": {
                              "current": null,
                            },
                            "treeItemRef": {
                              "current": <div
                                aria-level="1"
                                class="fui-TreeItem r15xhw3a ___jer8zr0_6no3ah0 f10bgyvd"
                                data-fui-tree-item-value="root/child3ExpandingLabel"
                                data-test="TreeNodeContainer:root/child3ExpandingLabel"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="fui-TreeItemLayout r1bx0xiv child3ExpandingClass ___ehtpr00_100l8p1 fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc"
                                  data-test="TreeNode:root/child3ExpandingLabel"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__expandIcon rh4pu5o"
                                  >
                                    <div
                                      class="fui-Spinner r82apo5"
                                      role="progressbar"
                                    >
                                      <span
                                        class="fui-Spinner__spinner rvgcg50 ___cntk4j0_qwvqay0 fd461yt fjw5fx7 f1v3ph3m"
                                      >
                                        <span
                                          class="fui-Spinner__spinnerTail rxov3xa"
                                        />
                                      </span>
                                    </div>
                                  </div>
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                                  >
                                    <img
                                      alt=""
                                      src="child3ExpandingIcon"
                                      style="width: 16px; height: 16px;"
                                    />
                                  </div>
                                  <div
                                    class="fui-TreeItemLayout__main rklbe47"
                                  >
                                    child3ExpandingLabel
                                  </div>
                                </div>
                              </div>,
                            },
                            "value": "root/child3ExpandingLabel",
                          }
                        }
                      >
                        <TreeItemLayout
                          actions={false}
                          className="child3ExpandingClass"
                          data-test="TreeNode:root/child3ExpandingLabel"
                          iconBefore={
                            <img
                              alt=""
                              src="child3ExpandingIcon"
                              style={
                                {
                                  "height": 16,
                                  "width": 16,
                                }
                              }
                            />
                          }
                          style={
                            {
                              "backgroundColor": undefined,
                            }
                          }
                        >
                          <div
                            className="fui-TreeItemLayout r1bx0xiv child3ExpandingClass ___ehtpr00_100l8p1 fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc"
                            data-test="TreeNode:root/child3ExpandingLabel"
                            style={
                              {
                                "backgroundColor": undefined,
                              }
                            }
                          >
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__iconBefore rphzgg1 ___1lqnc2u_1hdcey2 f7x41pl"
                            >
                              <img
                                alt=""
                                src="child3ExpandingIcon"
                                style={
                                  {
                                    "height": 16,
                                    "width": 16,
                                  }
                                }
                              />
                            </div>
                            <div
                              className="fui-TreeItemLayout__main rklbe47"
                            >
                              child3ExpandingLabel
                            </div>
                          </div>
                        </TreeItemLayout>
                      </ContextSelector.Provider>
                    </div>
                  </TreeItem>
                </TreeNodeComponent>
              </div>
            </ContextSelector.Provider>
          </TreeProvider>
        </Tree>
      </ContextSelector.Provider>
    </div>
  </TreeItem>
</TreeNodeComponent>
`;

exports[`TreeNodeComponent renders a loading spinner if the node is loading: loaded 1`] = `
<TreeItem
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="rootClass"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        src="rootIcon"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    }
    style={
      {
        "backgroundColor": undefined,
      }
    }
  >
    rootLabel
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders a loading spinner if the node is loading: loading 1`] = `
<TreeItem
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="rootClass"
    data-test="TreeNode:root"
    expandIcon={
      <Spinner
        size="extra-tiny"
      />
    }
    iconBefore={
      <img
        alt=""
        src="rootIcon"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    }
    style={
      {
        "backgroundColor": undefined,
      }
    }
  >
    rootLabel
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders a node as expandable if it has empty, but defined, children array 1`] = `
<TreeItem
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="rootClass"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        src="rootIcon"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    }
    style={
      {
        "backgroundColor": undefined,
      }
    }
  >
    rootLabel
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders a node with a menu 1`] = `
<Menu
  onOpenChange={[Function]}
  openOnContext={true}
  positioning="below-end"
>
  <MenuTrigger
    disableButtonEnhancement={true}
  >
    <TreeItem
      data-test="TreeNodeContainer:root"
      itemType="leaf"
      onOpenChange={[Function]}
      value="root"
    >
      <TreeItemLayout
        actions={
          <Menu
            onOpenChange={[Function]}
          >
            <MenuTrigger
              disableButtonEnhancement={true}
            >
              <Button
                appearance="subtle"
                aria-label="More options"
                data-test="TreeNode/ContextMenuTrigger"
                icon={<MoreHorizontal20Regular />}
              />
            </MenuTrigger>
            <MenuPopover
              data-test="TreeNode/ContextMenu:root"
            >
              <MenuList>
                <MenuItem
                  data-test="TreeNode/ContextMenuItem:enabledItem"
                  onClick={[MockFunction enabledItemClick]}
                >
                  enabledItem
                </MenuItem>
                <MenuItem
                  data-test="TreeNode/ContextMenuItem:disabledItem"
                  disabled={true}
                  onClick={[MockFunction disabledItemClick]}
                >
                  disabledItem
                </MenuItem>
              </MenuList>
            </MenuPopover>
          </Menu>
        }
        className="rootClass"
        data-test="TreeNode:root"
        iconBefore={
          <img
            alt=""
            src="rootIcon"
            style={
              {
                "height": 16,
                "width": 16,
              }
            }
          />
        }
        style={
          {
            "backgroundColor": undefined,
          }
        }
      >
        rootLabel
      </TreeItemLayout>
    </TreeItem>
  </MenuTrigger>
  <MenuPopover>
    <MenuList>
      <MenuItem
        data-test="TreeNode/ContextMenuItem:enabledItem"
        key="enabledItem"
        onClick={[MockFunction enabledItemClick]}
      >
        enabledItem
      </MenuItem>
      <MenuItem
        data-test="TreeNode/ContextMenuItem:disabledItem"
        disabled={true}
        key="disabledItem"
        onClick={[MockFunction disabledItemClick]}
      >
        disabledItem
      </MenuItem>
    </MenuList>
  </MenuPopover>
</Menu>
`;

exports[`TreeNodeComponent renders a single node 1`] = `
<TreeItem
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="rootClass"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        src="rootIcon"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    }
    style={
      {
        "backgroundColor": undefined,
      }
    }
  >
    rootLabel
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders an icon if the node has one 1`] = `
<TreeItem
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="rootClass"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        src="the-icon.svg"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    }
    style={
      {
        "backgroundColor": undefined,
      }
    }
  >
    rootLabel
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders selected parent node as selected if no descendant nodes are selected 1`] = `
<TreeItem
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="rootClass"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        src="rootIcon"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    }
    style={
      {
        "backgroundColor": "var(--colorNeutralBackground1Selected)",
      }
    }
  >
    rootLabel
  </TreeItemLayout>
  <Tree
    style={
      {
        "overflow": undefined,
      }
    }
  >
    <TreeNodeComponent
      key="child1Label"
      node={
        {
          "children": [
            {
              "className": "grandchild1Class",
              "iconSrc": "grandchild1Icon",
              "id": "grandchild1",
              "label": "grandchild1Label",
              "onClick": [MockFunction grandchild1Click],
            },
            {
              "className": "grandchild2Class",
              "iconSrc": "grandchild2Icon",
              "id": "grandchild2",
              "label": "grandchild2Label",
              "onClick": [MockFunction grandchild2Click],
            },
          ],
          "className": "child1Class",
          "iconSrc": "child1Icon",
          "id": "child1",
          "label": "child1Label",
          "onClick": [MockFunction child1Click],
        }
      }
      treeNodeId="root/child1Label"
    />
    <TreeNodeComponent
      key="child2Label"
      node={
        {
          "className": "child2Class",
          "iconSrc": "child2Icon",
          "id": "child2",
          "label": "child2Label",
          "onClick": [MockFunction child2Click],
        }
      }
      treeNodeId="root/child2Label"
    />
  </Tree>
</TreeItem>
`;

exports[`TreeNodeComponent renders selected parent node as unselected if any descendant node is selected 1`] = `
<TreeItem
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="rootClass"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        src="rootIcon"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    }
    style={
      {
        "backgroundColor": undefined,
      }
    }
  >
    rootLabel
  </TreeItemLayout>
  <Tree
    style={
      {
        "overflow": undefined,
      }
    }
  >
    <TreeNodeComponent
      key="child1Label"
      node={
        {
          "children": [
            {
              "className": "grandchild1Class",
              "iconSrc": "grandchild1Icon",
              "id": "grandchild1",
              "isSelected": [Function],
              "label": "grandchild1Label",
              "onClick": [MockFunction grandchild1Click],
            },
            {
              "className": "grandchild2Class",
              "iconSrc": "grandchild2Icon",
              "id": "grandchild2",
              "label": "grandchild2Label",
              "onClick": [MockFunction grandchild2Click],
            },
          ],
          "className": "child1Class",
          "iconSrc": "child1Icon",
          "id": "child1",
          "label": "child1Label",
          "onClick": [MockFunction child1Click],
        }
      }
      treeNodeId="root/child1Label"
    />
    <TreeNodeComponent
      key="child2Label"
      node={
        {
          "className": "child2Class",
          "iconSrc": "child2Icon",
          "id": "child2",
          "label": "child2Label",
          "onClick": [MockFunction child2Click],
        }
      }
      treeNodeId="root/child2Label"
    />
  </Tree>
</TreeItem>
`;

exports[`TreeNodeComponent renders single selected leaf node as selected 1`] = `
<TreeItem
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="rootClass"
    data-test="TreeNode:root"
    iconBefore={
      <img
        alt=""
        src="rootIcon"
        style={
          {
            "height": 16,
            "width": 16,
          }
        }
      />
    }
    style={
      {
        "backgroundColor": "var(--colorNeutralBackground1Selected)",
      }
    }
  >
    rootLabel
  </TreeItemLayout>
</TreeItem>
`;
